tests/snapshots/run_wpt_conformance__onnx_hardSigmoid_float16_positive_4D_tensor_specified_positive_options_alpha_default_options_beta.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "hard_sigmoid.https.any.js",
    "hardSigmoid float16 positive 4D tensor specified positive options.alpha default options.beta",
    "onnx",
    "PASS",
)
